Add the secret to the Helm chart

--- a/k8s/11.md
+++ b/k8s/11.md
@@ -34,3 +34,16 @@ PS C:\Users\aabou> $secret = kubectl get secret my-api-key --template="{{.data.k
 PS C:\Users\aabou> [System.Text.Encoding]::ASCII.GetString([System.Convert]::FromBase64String($secret))
 7amada-bel-ganzabeel
 ```
+
+- After updating the Helm deployment with the secret:
+```powershell
+PS C:\Users\aabou> kubectl get po
+NAME                          READY   STATUS    RESTARTS   AGE
+app-python-64896857f7-8tpc4   1/1     Running   0          3m21s
+app-python-64896857f7-9s9br   1/1     Running   0          3m25s
+app-python-64896857f7-jr6xr   1/1     Running   0          3m16s
+PS C:\Users\aabou> kubectl exec app-python-64896857f7-8tpc4 -- printenv | Select-String -Pattern "API_KEY"
+
+API_KEY=7amada-bel-ganzabeel
+```
+_Note: `Select-String` is the equivalent of `grep` on PowerShell._
