[Bonus] Add Kubernetes update strategies

--- a/k8s/13.md
+++ b/k8s/13.md
@@ -48,3 +48,16 @@ Consequently, each pod (replica) is operating over a different file.
 For the logic of our application, the replicas do not need to share a common state.
 Each instance is independent of the others and thus ordering does not give us any benefits, and it only slows down the startup.
 This can be avoided by setting `podManagementPolicy` to `"Parallel"` in the StatefulSet spec.
+
+## Update Strategies
+
+Kubernetes supports different strategies for rolling out new updates:
+
+- **Recreate**: Terminate the old version and then release the new one. This works best for a development environment, but it ensues a lot of downtime.
+- **Ramped**: A slower strategy that allows for a gradual rollout of new versions. Similar to the recreate strategy, but it only replaces one replica after the other instead of the entire system. This can lead to different versions of the same app being deployed at the same time with no control over which one receives the traffic, and it can take some time to complete.
+- **Blue/Green**: The new version is deployed alongside the old one, but no traffic is directed to it yet. Only after it is tested and ready will the traffic be switched to it and the old replicas will be deleted. This fixes the downtime and versioning issues, but requires double the resources.
+- **Canary**: A combination of the blue/green and ramped strategies. It deploys two versions of the app, one of which is kept up to date and the other is not. The traffic is split between the two versions in proportion to the number of replicas. This allows testing the new version with a small subset of the users, and then switching everyone to the new version once it is ready.
+- **A/B Testing**: Rather than splitting traffic by deployed resources as with the canary strategy, this strategy targets a given subset of users depending on some parameters such as the device they are using. It can be implemented using the canary strategy.
+
+
+_Reference: https://blog.container-solutions.com/kubernetes-deployment-strategies_
