--- a/k8s/14.md
+++ b/k8s/14.md
@@ -108,3 +108,25 @@ configmap/prometheus-app-python-kube-prometheus-prometheus-rulefiles-0   28     
 - Number of alerts:
   9
   ![](./images/alertmanager.png)
+
+## Init Containers
+
+They are containers that run before the main containers.
+
+```powershell
+PS C:\Users\aabou> kubectl exec pods/app-python-0 -- cat /test/cern.html
+Defaulted container "app-python" out of: app-python, init-container (init)
+<html><head></head><body><header>
+<title>http://info.cern.ch</title>
+</header>
+
+<h1>http://info.cern.ch - home of the first website</h1>
+<p>From here you can:</p>
+<ul>
+<li><a href="http://info.cern.ch/hypertext/WWW/TheProject.html">Browse the first website</a></li>
+<li><a href="http://line-mode.cern.ch/www/hypertext/WWW/TheProject.html">Browse the first website using the line-mode browser simulator</a></li>
+<li><a href="http://home.web.cern.ch/topics/birth-web">Learn about the birth of the web</a></li>
+<li><a href="http://home.web.cern.ch/about">Learn about CERN, the physics laboratory where the web was born</a></li>
+</ul>
+</body></html>
+```
